[package]
name = "clnaddress"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.8"
log = "0.4"

cln-plugin = "0.4"
# cln-plugin = { path="../lightning/plugins/", version = "^0.4" }
cln-rpc = "0.4"
# cln-rpc = { path="../lightning/cln-rpc/", version = "^0.4" }

bech32 = "0.11"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["fs","sync","rt-multi-thread"] }
url = { version = "2", features = [ "serde" ] }
uuid = { version = "1", features = [ "v4" ] }
nostr-sdk = { version = "0.42", features = ["nip57"] }
parking_lot = "0.12"

[profile.optimized]
inherits = "release"
strip = "debuginfo"
codegen-units = 1
lto = "fat"
debug = false