[project]
name = "clnaddress"
version = "0.1.0"
requires-python = ">=3.9.2"
description = "python dependencies for running tests"

[dependency-groups]
dev = [
    "pytest>=7.4,<9",
    "pytest-asyncio>=0.23.8, <2",
    "pytest-xdist>=3.7,<4",
    "pytest-timeout>=2.4,<3",
    "nostr-sdk>=0.44",
    "pyln-testing>=24.11.1",
    "pyln-client>=24.11.1",
    "pyln-proto>=24.11.1",
]
