[project]
name = "clnaddress"
version = "0.1.0"
requires-python = ">=3.10"
description = "python dependencies for running tests"

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=0.23.8, <2",
    "pytest-xdist>=3.7,<4",
    "pytest-timeout>=2.4,<3",
    "nostr-sdk>=0.44",
    "pyln-testing>=25.5",
    "pyln-client>=25.5",
    "pyln-proto>=25.5",
]
